# typemux

./: .gitattributes  .gitignore  .golangci.yml  CLAUDE.md  LICENSE  Makefile  README.md  annotations.go  annotations.json  config.go  diff.go  generator.go  go.mod  importer.go  typemux.config.yaml  typemux.go  typemux_test.go
.github/: README.md
.github/workflows/: ci.yml
cmd/graphql2typemux/: main.go
cmd/openapi2typemux/: main.go
cmd/proto2typemux/: main.go
cmd/typemux/: main.go
docs/: CONTRIBUTING.md  EXAMPLES.md  README.md  YAML_ANNOTATIONS.md  YAML_ANNOTATIONS_GUIDE.md  _config.yml  annotations.md  configuration.md  examples.md  index.md  library.md  quickstart.md  reference.md  tutorial.md
docs/_layouts/: default.html
docs/_plugins/: typemux_lexer.rb
docs/github-site/: _config.yml  quickstart.md
examples/: .gitignore  simple.config.yaml
examples/annotations/: annotations_example.typemux
examples/basic/: basic.typemux
examples/cross-namespace/: orders.typemux  users.typemux
examples/custom-field-numbers/: custom_field_numbers.typemux
examples/diff/: README.md  schema-v1.typemux  schema-v2-breaking.typemux  (+1 more)
examples/diff-demo/: README.md  base.typemux  modified.typemux
scripts/: README.md  check-annotations.sh  generate-annotation-docs.js  pre-commit-ci.sh  quick-check.sh
validate/: README.md  pyproject.toml
validate/src/validate/: __init__.py
validate/tests/: __init__.py  test_schemas.py
vscode-extension/: INSTALL.md  README.md  annotations.json  language-configuration.json  package-lock.json  package.json  tsconfig.json
(+149 files in other folders)
